# NiBot

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  config.example.json  docker-compose.yml  pyproject.toml
docs/: configuration.md  deployment.md  quickstart.md  usage-guide.md
nibot/: __init__.py  __main__.py  agent.py  app.py  bus.py  channel.py  compact.py  config.py  context.py  event_log.py  evolution_log.py  evolution_trigger.py  health.py  log.py  marketplace.py  memory.py  metrics.py  provider.py  provider_pool.py  rate_limiter.py  registry.py  sandbox.py  scheduler.py  session.py  skills.py  subagent.py  types.py  webhook_server.py  worktree.py
scripts/: analyze_session.py  backup.sh  deploy_mac.py  docker-run.sh  e2e_test.sh  update.sh
tests/: conftest.py  test_channel_feishu.py  test_channel_telegram.py  test_compact.py  test_complex_processing.py  test_e2e.py  test_mcp_reconnect.py  test_memory_rotation.py  test_nibot_core.py  test_provider_jitter.py  test_rate_limit_detection.py  test_session_eviction.py  test_session_tree.py  test_skill_usage.py  test_stream_tool_calls.py  test_subagent_timeout.py  test_tools_admin.py  test_tools_code_review.py  test_tools_exec.py  test_tools_file.py  test_tools_web.py  test_v020_features.py  test_v030_features.py  test_v040_features.py  test_v050_features.py  test_v060_features.py  test_v070_features.py  test_v080_features.py  test_v080b_features.py  test_v090a_features.py  test_v090b_features.py  test_v100_channels.py  test_v100_features.py  test_v100_pipeline.py  test_v100_platform.py  (+15 more)
(+34 files in other folders)
